objects/AreaDocument__c.object
<CustomObject>
    <fields>
        <fullName>AreaDocumentEID__c</fullName>
        <description>The Enterprise ID for this Area Document.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Area Document.</inlineHelpText>
        <label>Area Document EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area associated with the repository document</description>
        <inlineHelpText>The area associated with the repository document</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Documents</relationshipLabel>
        <relationshipName>AreaDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RepositoryDocument__c</fullName>
        <description>The document associated with the area</description>
        <inlineHelpText>The document associated with the area</inlineHelpText>
        <label>Document</label>
        <referenceTo>RepositoryDocument__c</referenceTo>
        <relationshipLabel>Area Documents</relationshipLabel>
        <relationshipName>AreaRepositoryDocuments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Area Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>